# poc-opcua-mqtt-bridge

./: .env  .gitignore  README.md  compose.yaml
.devcontainer/: Dockerfile  devcontainer.json
bridge/: .clang-tidy  CMakeLists.txt  conanfile.txt
bridge/app/: bridge.cpp  bridge.hpp  main.cpp
bridge/app/tests/: CMakeLists.txt  bridge_test.cpp
bridge/libs/: README.md
bridge/libs/logger/: CMakeLists.txt
bridge/libs/logger/include/logger/: ilogger.hpp  stdout_logger.hpp
bridge/libs/logger/src/: stdout_logger.cpp
bridge/libs/logger/tests/: CMakeLists.txt  stdout_logger_test.cpp
bridge/libs/mqtt/: CMakeLists.txt
bridge/libs/mqtt/include/mqtt/: imqtt.hpp  paho_mqtt.hpp
bridge/libs/mqtt/src/: paho_mqtt.cpp
bridge/libs/mqtt/src/detail/: paho_mqtt_internal.hpp
bridge/libs/mqtt/tests/: CMakeLists.txt  paho_mqtt_test.cpp
bridge/libs/opcua/: CMakeLists.txt
bridge/libs/opcua/include/opcua/: iopcua.hpp  open62541_opcua.hpp  path_value.hpp
bridge/libs/opcua/src/: open62541_opcua.cpp  path_value.cpp
bridge/libs/opcua/src/detail/: open62541_logger.cpp  open62541_logger.hpp  open62541_logger_internal.hpp  open62541_opcua_internal.hpp  open62541_value_reader.cpp  open62541_value_reader.hpp  open62541_value_reader_internal.hpp  path_value_internal.hpp
bridge/libs/opcua/tests/: CMakeLists.txt  open62541_logger_test.cpp  open62541_opcua_test.cpp  open62541_value_reader_test.cpp  path_value_test.cpp
scripts/dev/: app-build.sh  app-run.sh  app-unittest.sh  check-clang-tidy.sh  docs-generate.sh  mqtt-listen.sh
scripts/host/: sim-logs.sh  sim-rebuild-opcua.sh  sim-restart-opcua.sh
simulation/mqtt/: mosquitto-entrypoint.sh
simulation/opcua/: Dockerfile  server.py
